--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -29,6 +29,7 @@ $color-green:#2ECC40;
 
 $grid-width: 114rem;
 $gutter-vertical: 7rem;
+$gutter-vertical-small: 6rem;
 $gutter-horizontal: 5rem;
 
 //Font size
