--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -29,6 +29,10 @@
         border-radius:10px;
         transition: all .3s;
 
+        @include design(tab-portrait){
+            width:100%;
+        }
+
         &:focus{
             outline: none;
             border-bottom: 4px solid $color-primary;
@@ -61,6 +65,11 @@
         display: inline-block;
         margin-left: 1rem;
         position: relative;
+
+        @include design(tab-portrait){
+            width:100%;
+            margin-bottom:1rem;
+        }
     }
 
     &__radio-label{
