--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -4,6 +4,16 @@
 
   &:not(:last-child) {
     margin-bottom: $gutter-vertical;
+
+    @include design(tab-portrait){
+      margin-bottom: $gutter-vertical-small;
+    }
+
+  }
+
+  @include design(tab-portrait){
+    max-width: 50rem;
+    padding:0 3rem;
   }
 
   @include clearfix;
@@ -13,6 +23,15 @@
 
     &:not(:last-child) {
       margin-right: $gutter-horizontal;
+
+      @include design(tab-portrait){
+        margin-right:0;
+        margin-bottom: $gutter-vertical-small;
+      }
+    }
+
+    @include design(tab-portrait){
+      width:100% !important;
     }
   }
 
