--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -13,3 +13,21 @@
     transform: translate(-50%,-50%);
 }
 
+//Media Queries
+// 1em = 16px
+@mixin design($device){
+    @if($device == phone){
+        @media (max-width: 37.5em) {@content};  //600px
+    }
+    @if($device == tab-portrait){
+        @media (max-width: 56.25em) {@content};  //900px
+    }
+    @if($device == tab-horizontal){
+        @media (max-width: 75em) {@content};  //1200px
+    }
+    @if($device == big-desktop){
+        @media (min-width: 112.5em) {@content};  //1800px
+    }
+    
+}
+
