--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,8 +11,26 @@
 html {
   /* 62.5% of default 16px = 10px to make 1rem calculations simple*/
   font-size: 62.5%;
+ 
+  @include design(tab-horizontal){
+    font-size: 56.25%;
+  }
+  @include design(tab-portrait){
+    font-size: 50%;
+  }
+
+   @include design(big-desktop){
+    font-size: 75%;
+  }
+  
+  
 }
 
 body {
   box-sizing: border-box;
+  padding: 3rem;
+
+  @include design(tab-portrait){
+    padding: 0;
+  }
 }
