--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -3,23 +3,47 @@
 }
 
 .u-margin-bottom-small{
-    margin-bottom: 1rem;
+    margin-bottom: 1rem !important;
+
+    @include design(tab-portrait){
+        margin-bottom: .7rem !important;
+    }
 }
 .u-margin-bottom-medium{
-    margin-bottom: 4rem;
+    margin-bottom: 4rem !important;
+
+    @include design(tab-portrait){
+        margin-bottom: 3rem !important;
+    }
 }
 .u-margin-bottom-large{
-    margin-bottom: 8rem;
+    margin-bottom: 8rem !important;
+
+    @include design(tab-portrait){
+        margin-bottom: 5rem !important;
+    }
 }
 
 .u-margin-top-large{
-    margin-top: 8rem;
+    margin-top: 8rem !important;
+
+    @include design(tab-portrait){
+        margin-top: 5rem !important;
+    }
 }
 
 .u-margin-top-medium{
-    margin-top: 4rem;
+    margin-top: 4rem !important;
+
+    @include design(tab-portrait){
+        margin-top: 3rem !important;
+    }
 }
 
 .u-margin-top-xl{
-    margin-top: 12rem;
+    margin-top: 12rem !important;
+
+    @include design(tab-portrait){
+        margin-top: 9rem !important;
+    }
 }
