--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -14,7 +14,7 @@
     left: 0;
     width: 100%;
     backface-visibility: hidden;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     overflow: hidden;
     box-shadow: $default-shadow;
 
@@ -61,38 +61,41 @@
     z-index: -10;
   }
 
-  &__picture{
+  &__picture {
     background-size: cover;
     height: 20rem;
     background-blend-mode: hard-light;
     clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
 
-    &--1{
+    &--1 {
       background-image: linear-gradient(
-        to right bottom,
-        $color-blue-light,
-        $color-blue-dark
-      ), url('../img/bird.jpg');
+          to right bottom,
+          $color-blue-light,
+          $color-blue-dark
+        ),
+        url("../img/bird.jpg");
     }
 
-    &--2{
+    &--2 {
       background-image: linear-gradient(
-        to right bottom,
-        $color-brown-light,
-        $color-brown-dark
-      ),url('../img/monkey.jpg');
+          to right bottom,
+          $color-brown-light,
+          $color-brown-dark
+        ),
+        url("../img/monkey.jpg");
     }
 
-    &--3{
+    &--3 {
       background-image: linear-gradient(
-        to right bottom,
-        $color-green-light,
-        $color-green-dark
-      ),url('../img/fish-card.jpg');
+          to right bottom,
+          $color-green-light,
+          $color-green-dark
+        ),
+        url("../img/fish-card.jpg");
     }
   }
 
-  &__heading{
+  &__heading {
     font-size: 2.8rem;
     font-weight: 300;
     text-transform: uppercase;
@@ -100,79 +103,128 @@
     text-align: right;
     position: absolute;
     top: 10rem;
-    right:1rem;
-    width:50%;
+    right: 1rem;
+    width: 50%;
   }
 
-  &__heading-span{
-    padding: .6rem 1rem;
+  &__heading-span {
+    padding: 0.6rem 1rem;
     box-decoration-break: clone;
-    &--1{
+    &--1 {
       background: linear-gradient(
         to right bottom,
-        rgba($color-blue-light,0.8),
-        rgba($color-blue-dark,0.8)
+        rgba($color-blue-light, 0.8),
+        rgba($color-blue-dark, 0.8)
       );
     }
 
-    &--2{
+    &--2 {
       background: linear-gradient(
         to right bottom,
-        rgba($color-brown-light,0.8),
-        rgba($color-brown-dark,0.8)
+        rgba($color-brown-light, 0.8),
+        rgba($color-brown-dark, 0.8)
       );
     }
 
-    &--3{
+    &--3 {
       background: linear-gradient(
         to right bottom,
-        rgba($color-green-light,0.8),
-        rgba($color-green-dark,0.8)
+        rgba($color-green-light, 0.8),
+        rgba($color-green-dark, 0.8)
       );
     }
   }
 
-  &__details{
+  &__details {
     font-size: 1.6rem;
-    
-    ul{
-      list-style-type: none;
-      width:80%;
-      margin:2rem auto;
 
-      li{
+    ul {
+      list-style-type: none;
+      width: 80%;
+      margin: 2rem auto;
+
+      li {
         padding: 1rem;
-        text-align:center;
-        &:not(:last-child){
+        text-align: center;
+        &:not(:last-child) {
           border-bottom: 1px solid $color-grey-light;
-        } 
+        }
       }
     }
   }
 
-  &__price-form{
+  &__price-form {
     position: absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 90%;
     text-align: center;
   }
 
-  &__price-box{
+  &__price-box {
     text-align: center;
-    color:$color-white;
+    color: $color-white;
     margin-bottom: 8rem;
   }
-  &__price-only{
+  &__price-only {
     font-size: 1.6rem;
     text-transform: uppercase;
   }
 
-  &__price-value{
+  &__price-value {
     font-size: 5rem;
     font-weight: 100;
   }
 
+  @include design(tab-portrait) {
+    
+    height: auto;
+    border-radius: 3px;
+    background-color: $color-white;
+    box-shadow: $default-shadow;
+
+    &__side {
+      height: auto;
+      position: relative;
+      box-shadow: none;
+      
   
+      &--back {
+        transform: rotateY(0);
+        clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+        
+      }
+    }
+
+    &:hover &__side--front {
+      transform: rotateY(0);
+    }
+
+    &__details{
+      padding: 1rem 3rem;
+    }
+
+    &__price-form {
+      position: relative;
+      top: 0;
+      left: 0;
+      transform: translate(0);
+      width: 100%;
+      padding: 7rem 4rem 4rem 4rem;
+    }
+
+    &__price-box {
+      margin-bottom: 3rem;
+    }
+    &__price-only {
+      font-size: 1.6rem;
+      text-transform: uppercase;
+    }
+
+    &__price-value {
+      font-size: 5rem;
+      font-weight: 100;
+    }
+  }
 }
