--- a/sass/layout/__navigation.scss
+++ b/sass/layout/__navigation.scss
@@ -12,10 +12,15 @@
     position: fixed;
     background-color: white;
     right: 6rem;
-    top: 8rem;
+    top: 6rem;
     z-index: 200;
     box-shadow: $default-shadow;
     cursor: pointer;
+
+    @include design(tab-portrait){
+      right: 4rem;
+      top: 4rem;
+    }
   }
 
   &__background {
@@ -23,13 +28,16 @@
     width: 5rem;
     border-radius: 50%;
     position: fixed;
-    top: 8.5rem;
+    top: 6.5rem;
     right: 6.5rem;
     background-image: radial-gradient($color-primary, $color-primary-dark);
     z-index: 100;
     transition: all .9s cubic-bezier(.7,.06,.66,1.09);
-
-    // transform: scale(70);
+    
+    @include design(tab-portrait){
+      right: 4.5rem;
+      top: 4.5rem;
+    }
   }
 
   &__nav {
@@ -49,6 +57,7 @@
 
     list-style: none;
     text-align: center;
+    width:100%;
   }
 
   &__item {
@@ -89,7 +98,7 @@
       width: 3rem;
       display:inline-block;
       margin-right:1.5rem;
-      transform: translateY(.5rem);
+      transform: translateY(.7rem);
   }
 
   &__checkbox:checked ~ &__background{
