--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,11 +5,15 @@
   padding: 25rem 0;
   margin-top: -25vh;
   font-family: "Quicksand", sans-serif;
+
+  @include design(tab-portrait){
+    padding:20rem 0;
+  }
 }
 
 .section-features {
   padding: 20rem 0;
-  height: 100vh;
+  // height: 100vh;
   margin-top: -25vh;
   background-image: linear-gradient(
       to right top,
@@ -19,18 +23,36 @@
     url("../img/elephant-horizontal.jpg");
   background-size: cover;
   background-position: top;
-  clip-path: polygon(0 0, 100% 15vh, 100% 100%, 0 85vh);
+  // clip-path: polygon(0 0, 100% 15vh, 100% 100%, 0 85vh);
+
+  transform: skewY(5deg);
+
+  & > *{
+    transform: skewY(-5deg);
+  }
+
+  @include design(tab-portrait){
+    padding:10rem 0;
+  }
 }
 
 .section-serial-type {
   background-color: $color-grey-light;
   padding: 20rem 0 15rem 0;
   margin-top: -15vh;
+
+  @include design(tab-portrait){
+    padding: 15rem 0 10rem 0;
+  }
 }
 
 .section-testimonials {
   padding: 15rem 0;
   position: relative;
+
+  @include design(tab-portrait){
+    padding: 10rem 0;
+  }
 }
 
 .section-contact {
@@ -40,6 +62,10 @@
     $color-primary-light,
     $color-primary
   );
+
+  @include design(tab-portrait){
+    padding: 10rem 0;
+  }
 }
 
 .contact {
@@ -55,7 +81,28 @@
   border-radius: 3px;
   box-shadow: $default-shadow;
   height: 50rem;
-  
+
+  @include design(tab-horizontal){
+    background-image: linear-gradient(
+      80deg,
+      transparent 0%,
+      transparent 39.5%,
+      rgba($color-white, 0.8) 40%
+    ),
+    url("../img/child-deer.jpg");
+    background-size: cover;
+  }
+
+  @include design(tab-portrait){
+    background-image: linear-gradient(
+      to right,
+      rgba($color-white, 0.6) 0%,
+      rgba($color-white, 0.6) 100%
+    ),
+    url("../img/child-deer.jpg");
+    background-size: cover;
+    background-position: center;
+  }
 
   &__form{
     width:50%;
@@ -63,5 +110,13 @@
     float: right;
 
     @include clearfix;
+
+    @include design(tab-horizontal){
+      width:60%;
+    }
+
+    @include design(tab-portrait){
+      width: 100%;
+    }
   }
 }
