--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -13,6 +13,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     border-radius: 0.5rem;
     overflow: hidden;
@@ -177,8 +178,8 @@
     font-weight: 100;
   }
 
-  @include design(tab-portrait) {
-    
+    @media only screen and (max-width: 56.25em),
+    only screen and (hover:none) {
     height: auto;
     border-radius: 3px;
     background-color: $color-white;
