--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,7 +1,7 @@
 .modal{
     width: 100vw;
     height:100%;
-    background-color: rgba($color-black,.95);
+    background-color: rgba($color-black,.85);
     position: fixed;
     top:0;
     left:0;
@@ -9,6 +9,12 @@
     opacity: 0;
     visibility: hidden;
     transition: all .8s;
+
+    @supports (backdrop-filter: blur(.8rem)) or (-webkit-backdrop-filter: blur(.8rem)){
+        -webkit-backdrop-filter: blur(.8rem);
+        backdrop-filter: blur(.8rem);
+        background-color: rgba($color-black,.3);
+    }
 
     &__box{
         @include center-vh;
