--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 
 .header {
-    height: 95vh;
+    height: 85vh;
     background-image: linear-gradient(
         to right top,
         rgba($color-primary-light, 0.8),
@@ -9,8 +9,13 @@
       url("../img/header-background.jpg");
     background-size: cover;
     background-position: center;
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85vh);
     position: relative;
+
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)){
+      height: 95vh;
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85vh);
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85vh);
+    }
   
     &__logo-box {
       position: absolute;
