--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -36,7 +36,7 @@
     border:none;
     }
 
-    @include design(phone) {
+    @include design(tab-portrait) {
       transform: translateX(-3rem) skewX(0);
     }
   }
@@ -66,7 +66,7 @@
     font-weight: 200;
     transform: skewX(12deg);
 
-    @include design(phone) {
+    @include design(tab-portrait) {
       transform: skewX(0);
     }
   }
