--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -8,6 +8,7 @@
 
   @include design(tab-portrait){
     padding:20rem 0;
+    margin-top: -15vh;
   }
 }
 
@@ -33,6 +34,7 @@
 
   @include design(tab-portrait){
     padding:10rem 0;
+    margin-top: -15vh;
   }
 }
 
@@ -43,6 +45,7 @@
 
   @include design(tab-portrait){
     padding: 15rem 0 10rem 0;
+    margin-top: -5vh;
   }
 }
 
@@ -117,6 +120,7 @@
 
     @include design(tab-portrait){
       width: 100%;
+      float:none;
     }
   }
 }
